# featurize-cvat

./: README.md  pyproject.toml
apphub/: cvat.py
